--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Adel Hassan <tomasander12@gmail.com>
+Mohammed Refaat <mohammedahmed.refaat@gmail.com>
